--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /OwenSkinAnimation/x64/Debug
 /OwenSkinAnimation/.vs/OwenSkinAnimation
 /OwenSkinAnimation/x64/Release
+/x64
+/.vs/OwenSkinAnimation
