--- a/OwenSkinAnimation.vcxproj.filters
+++ b/OwenSkinAnimation.vcxproj.filters
@@ -1,33 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="private">
-      <UniqueIdentifier>{88b1c203-1de9-435b-b05f-b8f5a71c9c0f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="public">
-      <UniqueIdentifier>{b8c27382-a795-44f2-b30b-d300366a3333}</UniqueIdentifier>
-    </Filter>
     <Filter Include="resources">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="src">
-      <UniqueIdentifier>{2eb82842-3d51-418c-a584-81dfef9573b1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="imgui">
       <UniqueIdentifier>{6e45e004-e86f-4669-a120-9467875a97c9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="demo">
+      <UniqueIdentifier>{2eb82842-3d51-418c-a584-81dfef9573b1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine">
+      <UniqueIdentifier>{9db9da3d-e1bf-423c-a868-5ec73d3667d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="glad">
+      <UniqueIdentifier>{9bd99bd1-f56f-49ff-8da6-0eb1d2f7a9b6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="graphics">
+      <UniqueIdentifier>{dfc4e0db-6620-4a08-877f-42fdde7ea8ea}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="math">
+      <UniqueIdentifier>{448e275e-bc40-4ef2-be31-2b87f3dac4a1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h">
-      <Filter>public</Filter>
-    </ClInclude>
-    <ClInclude Include="glad.h">
-      <Filter>public</Filter>
-    </ClInclude>
-    <ClInclude Include="khrplatform.h">
-      <Filter>public</Filter>
-    </ClInclude>
     <ClInclude Include="imgui\imconfig.h">
       <Filter>imgui</Filter>
     </ClInclude>
@@ -55,17 +52,20 @@
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>imgui</Filter>
     </ClInclude>
+    <ClInclude Include="engine\Application.h">
+      <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="glad\glad.h">
+      <Filter>glad</Filter>
+    </ClInclude>
+    <ClInclude Include="glad\khrplatform.h">
+      <Filter>glad</Filter>
+    </ClInclude>
+    <ClInclude Include="math\Vector3.h">
+      <Filter>math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp">
-      <Filter>private</Filter>
-    </ClCompile>
-    <ClCompile Include="glad.c">
-      <Filter>private</Filter>
-    </ClCompile>
-    <ClCompile Include="MainWindow.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
@@ -86,6 +86,18 @@
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="demo\MainWindow.cpp">
+      <Filter>demo</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\Application.cpp">
+      <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="glad\glad.c">
+      <Filter>glad</Filter>
+    </ClCompile>
+    <ClCompile Include="math\Vector3.cpp">
+      <Filter>math</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
