--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
+Pos=127,48
 Size=339,180
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=695,24
+Pos=668,-20
 Size=550,680
+Collapsed=0
+
+[Window][Another Window]
+Pos=159,280
+Size=198,71
+Collapsed=0
+
+[Window][Example: Console]
+Pos=274,101
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=182,116
+Size=485,414
 Collapsed=0
 
