Update math library.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /OwenSkinAnimation/x64/Release
 /x64
 /.vs/OwenSkinAnimation
+/imgui.ini
+/OwenSkinAnimation.vcxproj
+/OwenSkinAnimation.vcxproj.filters
